@@ -291,9 +291,10 @@ Ext.define('TP.SmallWidget', {
     },
 
     /* render label for this widget */
-    setIconLabel: function(cfg, force_perfdata) {
+    setIconLabel: function(cfg, force_perfdata, layoutCfg) {
         var panel = this;
-        if(cfg == undefined) { cfg = this.xdata.label; }
+        if(cfg       == undefined) { cfg       = this.xdata.label; }
+        if(layoutCfg == undefined) { layoutCfg = this.xdata.layout; }
         if(!this.el || !this.el.dom)  { return; }
         if(!this.el.dom.style.zIndex && cfg && cfg.labeltext) {
             var tab  = Ext.getCmp(panel.panel_id);
@@ -306,7 +307,7 @@ Ext.define('TP.SmallWidget', {
             TP.timeouts['remove_label_'+panel.id] = window.setTimeout(function() {
                 TP.removeLabel[panel.id].destroy();
                 delete TP.removeLabel[panel.id];
-                panel.setIconLabel(cfg, force_perfdata);
+                panel.setIconLabel(cfg, force_perfdata, layoutCfg);
             }, 100);
         }
         if(cfg == undefined) { return; }
@@ -526,6 +527,17 @@ Ext.define('TP.SmallWidget', {
         el.style.top  = top+"px";
         this.labelEl.oldX = left;
         this.labelEl.oldY = top;
+
+        if(layoutCfg.width == undefined) {
+            el.style.width = "";
+        } else {
+            el.style.width = layoutCfg.width+"px";
+        }
+        if(layoutCfg.height == undefined) {
+            el.style.height = "";
+        } else {
+            el.style.height = layoutCfg.height+"px";
+        }
     },
 
     /* add dbl click and context menu events */
