@@ -1,6 +1,8 @@
 This file documents the revision history for the Monitoring Webinterface Thruk.
 
 next:
+          - Panorama View:
+            - make text label size configurable
           - Config Tool:
             - fix tools changes not beeing saved
 
